--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
+@import url('header.css');
+@import url('sobre.css');
+@import url('projetos.css');
+@import url('botoes.css');
+@import url('responsividade.css');
 html {
     scroll-behavior: smooth;
 }
@@ -23,221 +28,6 @@ body {
     background-color: #fff;
     color: var(--cor-texto);
 }
-
-header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50px;
-    background-color: #fff;
-    z-index: 1000;
-    display: flex;
-    align-items: center;
-    transition: box-shadow 0.3s ease-in-out;
-}
-
-header .interface {
-    max-width: 1280px;
-    width: 100%;
-    margin: 0 auto;
-    padding: 0 10%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 8%;
-    padding-right: 15%;
-   
-}
-
-
-.nome-logo {
-    font-size: 1.8rem;
-    font-weight: 700;
-    background-color: #fff;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    text-align:left;
-    padding-left: 
-}
-
-.menu {
-    display: flex;
-    align-items: center;
-    gap: 15px;
-}
-
-.menu ul {
-    display: flex;
-    list-style: none;
-    gap: 50px;
-    margin-right: 30px;
-}
-
-.menu a {
-    color: var(--cor-texto);
-    text-decoration: none;
-    font-weight: 500;
-    font-size: 1.3rem;
-    position: relative;
-    padding: 8px 0;
-    transition: all 0.3s ease;
-}
-
-.menu a:hover {
-    color: var(--cor-destaque);
-}
-
-.menu a::after {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 2px;
-    background: var(--cor-destaque);
-    bottom: 0;
-    left: 0;
-    transition: all 0.3s ease;
-}
-
-.menu a:hover::after {
-    width: 100%;
-}
-
-.btn-contato button {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    background-color: white;
-    color: #302e2e;
-    padding: 10px 25px;
-    border: 2px solid #eabba8;
-    border-radius: 60px;
-    font-weight: 600;
-    font-size: 17px;
-    cursor: pointer;
-    transition: all 0.3s;
-}
-
-.btn-contato button:hover {
-    box-shadow: 0 5px 20px var(--cor-sombra);
-    transform: translateY(-3px);
-}
-
-.sobre {
-    padding: 80px 10%;
-    background-color: #ffffff;
-}
-
-.flex-container {
-    display: flex;
-    align-items: flex-start;
-    gap: 200px;
-}
-
-.imagem-gihbli img {
-    border-radius: 50%;
-    max-width: 400px;
-    height: auto;
-}
-
-.conteudo-principal {
-    animation: fadeIn 0.8s ease-out;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: translateY(20px);
-    }
-
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.titulo-destaque h1 {
-    font-size: 3.5rem;
-    font-weight: 700;
-    line-height: 1.2;
-    color: #302e2e;
-    margin-bottom: 30px;
-}
-
-.titulo-destaque span {
-    color: #eabba8;
-    display: block;
-}
-
-.texto-descricao p {
-    font-size: 1.3rem;
-    line-height: 1.3;
-    color: var(--cor-texto);
-    margin-bottom: 25px;
-    max-width: 800px;
-    text-align: justify;
-
-}
-
-.tecnologias {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px;
-    margin: 20px 0;
-    list-style: none;
-    padding: 0;
-}
-
-.tecnologias li {
-    border: none;
-    background-color: transparent;
-    padding: 8px 15px;
-    font-weight: 600;
-    color: #302e2e;
-}
-
-.tecnologias li:hover img {
-    transform: translateY(-3px);
-    transition: all 0.2s ease-in-out;
-}
-
-.botoes-contato {
-    display: flex;
-    gap: 20px;
-    margin-top: 40px;
-    flex-wrap: wrap;
-}
-
-.btn-curriculo,
-.btn-rede-social {
-    display: inline-flex;
-    align-items: center;
-    gap: 8px;
-    padding: 12px 25px;
-    border-radius: 30px;
-    font-weight: 600;
-    text-decoration: none;
-    transition: all 0.3s;
-}
-
-.btn-curriculo {
-    background-color: white;
-    color: #302e2e;
-    border: 2px solid #eabba8;
-}
-
-.btn-rede-social {
-    background-color: #302e2e;
-    color: white;
-}
-
-.btn-curriculo:hover,
-.btn-rede-social:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 5px 20px var(--cor-sombra);
-}
-
 .linha-divisoria {
     border-top: 3px dashed #eabba8;
     margin: 45px 0;
@@ -245,140 +35,3 @@ header .interface {
     text-align: center;
 }
 
-.projetos {
-    font-size: 1.1rem;
-    font-weight: 620;
-    color: var(--cor-texto);
-    margin-bottom: 90px;
-    margin-left: 0;
-    text-align:left;
-    padding-left: 15%;
-    
-}
-
-/*ESTILO BOTÃO HAMBÚRGUER*/
-.hamburger-btn {
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    display: none;
-    flex-direction: column;
-    gap: 5px;
-    padding: 10px;
-    z-index: 1001;
-}
-
-.hamburger-btn .bar {
-    display: block;
-    width: 25px;
-    height: 3px;
-    background-color: var(--cor-texto);
-    border-radius: 3px;
-    transition: all 0.3s ease;
-    transform-origin: center;
-}
-
-/* Quando o menu está aberto (.active) → vira um X */
-.hamburger-btn.active .bar:nth-child(1) {
-    transform: rotate(45deg) translate(5px, 5px);
-}
-
-.hamburger-btn.active .bar:nth-child(2) {
-    opacity: 0;
-}
-
-.hamburger-btn.active .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(5px, -5px);
-}
-
-@media (max-width: 768px) {
-
-    .flex-container {
-        flex-direction: column;
-        align-items: center;
-        gap: 40px;
-        text-align: center;
-    }
-
-    .nome-logo {
-        font-size: 1.8rem;
-    }
-
-    .menu {
-        display: none;
-    }
-
-    .hamburger-btn {
-        display: flex;
-    }
-
-    .menu.active {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 20px;
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 70vw;
-        height: 40vh;
-        padding-top: 50px;
-        background-color: #fff;
-        z-index: 1000;
-        box-shadow: -5px 0 15px rgba(0, 0, 0, 0.1);
-    }
-
-    .menu.active ul {
-        flex-direction: column;
-        gap: 20px;
-        margin: 0px;
-        text-align: right;
-    }
-
-    .titulo-destaque h1 {
-        font-size: 2.5rem;
-    }
-
-    .imagem-gihbli img {
-        max-width: 250px;
-    }
-
-    .botoes-contato {
-        flex-direction: column;
-        gap: 15px;
-        align-items: center;
-    }
-
-    .tecnologias {
-        justify-content: center;
-    }
-
-    .botoes-contato {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        flex-wrap: wrap;
-        gap: 15px;
-        margin: 20px 0;
-        padding: 15px;
-
-    }
-
-    .btn-curriculo,
-    .btn-rede-social {
-
-        width: 220px
-    }
-
-    .interface {
-        margin-top: -55px;
-    }
-}
-    @media (max-width: 768px) {
-        .texto-descricao .saudacao {
-          text-align: center;
-        }
-      
-      }
